--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 
             <div class="progress">
-              <span class="skill">AWS Cloud <i class="val">75%</i></span>
+              <span class="skill">AWS Cloud <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="75"></div>
               </div>
@@ -179,7 +179,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val">55%</i></span>
+              <span class="skill">Python <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -245,7 +245,6 @@
                 <li>Lead in the design, development, and implementation of the UI/UX, frontend and backend.</li>
                 <li>Delegate tasks to the 6 members of the development team and provide counsel on all aspects of the project. </li>
                 <li>Supervise the assessment of all development stage in order to ensure quality and accuracy of the system</li>
-                <li>Spend a memorbel time as an intern.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -257,6 +256,15 @@
                 <li>Developed numerous mobile applications through given time.</li>
                 <li>Engaged in cross-functional projects, contributing brainstorming and strategic planning across diverse areas.</li>
                
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>Freelance Software Developer</h4>
+              <h5>2019 - 2024</h5>
+              <p><em></em></p>
+              <ul>
+                <li>Developed expertise in remote collaboration through contributions to diverse freelance projects, ensuring efficient communication and project completion. </li>  
               </ul>
             </div>
           </div>
