--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
+          <h2>Certifiacte</h2>
           <p>I continuously strive to enhance my skills and knowledge, diligently working to earn various certifications. Each certificate represents my commitment to personal and professional growth.</p>
         </div>
 
