spelling error correction

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#certificate" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Certifiacte</span></a></li>
+          <li><a href="#certificate" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Certificate</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
          
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
@@ -280,7 +280,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Certifiacte</h2>
+          <h2>Certificate</h2>
           <p>I continuously strive to enhance my skills and knowledge, diligently working to earn various certifications. Each certificate represents my commitment to personal and professional growth.</p>
         </div>
 
