--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Full-Stack Developer</h4>
-              <h5> Jul 2018 - Oct 2022 </h5>
+              <h5> Jul 2022 - Oct 2022 </h5>
               <p><em>Ministery Of Innovation and Technology-MinT </em></p>
               <ul>
                 <li>Lead in the design, development, and implementation of the UI/UX, frontend and backend.</li>
@@ -250,7 +250,7 @@
             </div>
             <div class="resume-item">
               <h4>Python Developer</h4>
-              <h5>Nov 2022 - June 2024</h5>
+              <h5>Jun 2023 - Sep 2023</h5>
               <p><em>Dallol-Tech PLC</em></p>
               <ul>
                 <li>Developed a user-centered interface with a focus on aesthetics and usability.</li>
@@ -462,13 +462,13 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>simonwubshetbk@gmail.com</p>
+                <p>simonwubshet254@gmail.com</p>
               </div>
             
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+251993457278</p>
+                <p>+251-929190911</p>
               </div>
 
                           </div>
