--- a/index.html
+++ b/index.html
@@ -214,18 +214,18 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Simon Wubshet</h4>
-              <p><em>Hard working and deadline-driven Developer with 6+ years of experience Freelance and Full time.</em></p>
+              <p><em>Hard working and deadline-driven Developer with 3+ years of experience Freelance and Full time.</em></p>
               <ul>
                 <li>Addis Ababa, Ethiopia </li>
-                <li>+251993457278</li>
-                <li>simonwubshetbk@gmail.com</li>
+                <li>+251-929190911</li>
+                <li>simonwubshet254@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Computer science and engineering</h4>
-              <h5>2013 - 2019</h5>
+              <h5>Sep 2019 - 2024</h5>
               <p><em>Adama science and technology university</em></p>
               <p>Pursued a Bachelor of Science degree in Computer Science and Engineering.</p>
             </div>
