--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <ul>
                  
                   <li><i class="bi bi-chevron-right"></i> <strong>linkedin:</strong> <span>www.linkedin.com/in/simonwubshet</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+251993457278</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+251-929190911</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Addis Ababa, Ethiopia</span></li>
                 </ul>
               </div>
@@ -108,7 +108,7 @@
                 <ul>
                
                   <li><i class="bi bi-chevron-right"></i> <strong>School:</strong> <span>Adama science and technology university</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>simonwubshetbk@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>simonwubshet254@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
