--- a/index.html
+++ b/index.html
@@ -496,6 +496,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/app1.jpg" class="img-fluid" alt="">
@@ -523,9 +524,32 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Screenshot 2024-07-26 143050.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="https://github.com/simaG19" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Screenshot 2024-07-13 115817.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="https://github.com/simaG19" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
 
-
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/fert.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="https://github.com/simaG19" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
