--- a/index.html
+++ b/index.html
@@ -345,6 +345,18 @@
       </div>
 
 
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/img/portfolio/aws-educate-getting-started-with-compute.png" class="img-fluid" alt="">
+          <div class="portfolio-links">
+          
+            <a href="https://www.credly.com/badges/d9850839-b67a-440e-a5b9-0626431ccf36/public_url" title="More Details"><i class="bx bx-link"></i></a>
+          </div>
+        </div>
+      </div>
+
+
+
 <!-- 4 Cert -->
       <div class="col-lg-4 col-md-6 portfolio-item filter-card">
         <div class="portfolio-wrap">
@@ -354,6 +366,8 @@
           </div>
         </div>
       </div>
+
+
 
 
 
@@ -452,6 +466,16 @@
     </div>
   </div>
 </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/img/portfolio/aws-educate-introduction-to-generative-ai.png" class="img-fluid" alt="">
+          <div class="portfolio-links">
+          
+            <a href="https://www.credly.com/badges/39cdeecc-fd7f-47e6-92d2-2fe849f06d52/public_url" title="More Details"><i class="bx bx-link"></i></a>
+          </div>
+        </div>
+      </div>
 </div>
 
 
