--- a/index.html
+++ b/index.html
@@ -355,6 +355,16 @@
         </div>
       </div>
 
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/img/portfolio/aws-educate-getting-started-with-networking.png" class="img-fluid" alt="">
+          <div class="portfolio-links">
+          
+            <a href="https://www.credly.com/badges/33fe5210-3996-4e99-8f81-80ef34b8cace/public_url" title="More Details"><i class="bx bx-link"></i></a>
+          </div>
+        </div>
+      </div>
+
 
 
 <!-- 4 Cert -->
