--- a/index.html
+++ b/index.html
@@ -224,13 +224,13 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Computer science and engineering</h4>
-              <h5>Sep 2019 - 2024</h5>
+<!--               <h5>Sep 2019 - 2024</h5> -->
               <p><em>Adama science and technology university</em></p>
               <p>Pursued a Bachelor of Science degree in Computer Science and Engineering.</p>
             </div>
             <div class="resume-item">
               <h4>AWS Cloud Computing</h4>
-              <h5>2023 - 2024</h5>
+<!--               <h5>2023 - 2024</h5> -->
               <p><em>Alx Ethiopia</em></p>
               <p>I am pleased to announce that I have successfully earned my Cloud Practitioner certification with excellent results. I am now pursuing the AWS Certified Cloud Architect Associate certification to further my knowledge and expertise in cloud computing.</p>
             </div>
@@ -239,7 +239,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Full-Stack Developer</h4>
-              <h5> Jul 2022 - Oct 2022 </h5>
+<!--               <h5> Jul 2022 - Oct 2022 </h5> -->
               <p><em>Ministery Of Innovation and Technology-MinT </em></p>
               <ul>
                 <li>Lead in the design, development, and implementation of the UI/UX, frontend and backend.</li>
@@ -249,7 +249,7 @@
             </div>
             <div class="resume-item">
               <h4>Python Developer</h4>
-              <h5>Jun 2023 - Sep 2023</h5>
+<!--               <h5>Jun 2023 - Sep 2023</h5> -->
               <p><em>Dallol-Tech PLC</em></p>
               <ul>
                 <li>Developed a user-centered interface with a focus on aesthetics and usability.</li>
