AWS Solutions Architect certifications badge

--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>With over 3 years of experience in developing and deploying high-quality software solutions, I am a strategic full-stack developer adept at designing, developing, and delivering exceptional products to clients. I hold a strong foundation in computer science principles, backed by a degree from Adama Science and Technology University. As an AWS Certified Consultant, I offer specialized consultancy services, assisting clients in migrating projects to the cloud seamlessly. My expertise extends to creating high-quality websites and mobile apps tailored to meet diverse client needs. Let’s work together to bring your vision to life with cutting-edge technology and innovative solutions.</p></div>
+          <p>Experienced full-stack developer with 3+ years in developing and deploying quality software solutions. Highly strategic
+            software engineer adept at designing, developing, deploying, and delivering exceptional products. Strong foundation in
+            computer science principles with a degree from Adama Science and Technology University. Continuously expanding
+            skillset to encompass software development, with proficiency in PHP/Laravel, and various database development.
+            Additionally, 2x AWS Certified, holding both the AWS Cloud Practitioner and AWS Solutions Architect certifications.</p></div>
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
@@ -322,12 +326,26 @@
 
 
       <!-- 1 Cert -->
+
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+          <img src="assets/img/portfolio/aws-certified-solutions-architect-associate.png" class="img-fluid" alt="">
+          <div class="portfolio-links">
+          
+            <a href="https://www.credly.com/badges/b7223fad-d7aa-4ab2-9a94-24b16e510c4b/public_url" title="More Details"><i class="bx bx-link"></i></a>
+          </div>
+        </div>
+      </div>
+
+
+
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
           <img src="assets/img/portfolio/aws-certified-cloud-practitioner.png" class="img-fluid" alt="">
           <div class="portfolio-links">
           
-            <a href="https://www.credly.com/badges/b36a0481-8df5-4381-91a2-31dd3aeaa5d7/linked_in_profile" title="More Details"><i class="bx bx-link"></i></a>
+            <a href="https://www.credly.com/badges/88479ba6-a597-43ff-ad75-c2afd6499c59/public_url" title="More Details"><i class="bx bx-link"></i></a>
           </div>
         </div>
       </div>
